--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <title> Portfolio </title>
 <body bgcolor=#ececec>
 <center>
- <img src="http://s15.postimg.org/qrqpd8h7v/image.png" /a>
- </center>
+ <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=75% height=75%>
  
  <a href="https://www.facebook.com/rohit.nigam"><img src="http://s30.postimg.org/4rllrjblp/image.png"></a>
  <a href="https://www.twitter.com/theRonnicle"><img src="http://s28.postimg.org/qxi40xqw9/image.png"></a>
  <a href="in.linkedin.com/pub/rohit-nigam/7a/454/8b/"><img src="http://s27.postimg.org/ez971244f/image.png"></a>
+ </center>
 </body>
 </html>
