--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title> Portfolio </title>
 <body bgcolor=#ececec>
 <center>
- <img src="http://s15.postimg.org/qrqpd8h7v/image.png">
+ <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=700px height=525px>
  </br>
  <a href="https://www.facebook.com/rohit.nigam"><img src="http://s30.postimg.org/4rllrjblp/image.png"></a>
  
