--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <html>
+<head<
 <title> Portfolio </title>
+</head>
+<link href='http://fonts.googleapis.com/css?family=Exo+2:400,300' rel='stylesheet' type='text/css'>
+<style>
+      body {
+        font-family: 'Exo 2', sans-serif;
+        font-size: 48px;
+      }
+    </style>
 <body bgcolor=#ececec>
 <center>
+IT undergrad. Programmer. Graphic designer. Tech Enthusiast. 
+</br> Like to work with products/technologies that interact with people directly
+</br> Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity!
  <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=700px height=525px>
  </br>
  <a href="https://www.facebook.com/rohit.nigam"><img src="http://s30.postimg.org/4rllrjblp/image.png"></a>
