--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <head<
 <title> Portfolio </title>
 </head>
-<link href='http://fonts.googleapis.com/css?family=Exo+2:400,300' rel='stylesheet' type='text/css'>
-<style>
+<link href='http://fonts.googleapis.com/css?family=Text+Me+One' rel='stylesheet' type='text/css'><style>
       body {
-        font-family: 'Exo 2', sans-serif;
-        font-size: 48px;
+        font-family: 'Text Me One', sans-serif;
+        font-size: 10px;
       }
     </style>
 <body bgcolor=#ececec>
