--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
-<head<
+<head>
 <title> Portfolio </title>
 </head>
 <link href='http://fonts.googleapis.com/css?family=Text+Me+One' rel='stylesheet' type='text/css'><style>
       body {
         font-family: 'Text Me One', sans-serif;
-        font-size: 10px;
+        font-size: 20px;
       }
     </style>
 <body bgcolor=#ececec>
@@ -13,8 +13,10 @@
 IT undergrad. Programmer. Graphic designer. Tech Enthusiast. 
 </br> Like to work with products/technologies that interact with people directly
 </br> Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity!
- <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=700px height=525px>
+ <div>
+       <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=700px height=525px>
  </br>
+ </div>
  <a href="https://www.facebook.com/rohit.nigam"><img src="http://s30.postimg.org/4rllrjblp/image.png"></a>
  
  <a href="https://in.linkedin.com/pub/rohit-nigam/7a/454/8b/"><img src="http://s27.postimg.org/ez971244f/image.png"></a>
