--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 IT undergrad. Programmer. Graphic designer. Tech Enthusiast. 
 </br> Like to work with products/technologies that interact with people directly
 </br> Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity!
+</br> <a href="https://docs.google.com/document/d/16EVN6ApIYVRzZYXIELs_ZClDvw4iYe-9UpknbvOpnJE/edit?usp=sharing">
+Check out my resume </a>
  <div>
        <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=700px height=525px>
  </br>
