--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
       body {
         font-family: 'Text Me One', sans-serif;
         font-size: 20px;
+        
       }
+      a:link {color:#2ecc71; text-decoration:none;}      /* unvisited link */
+a:visited {color:#3498db; text-decoration:none;}  /* visited link */
+a:hover {color:#e67e22;text-decoration:none;}  /* mouse over link */
+a:active {color:#e74c3c;text-decoration:none;}  /* selected link */
     </style>
 <body bgcolor=#ececec>
 <center>
