--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         font-size: 20px;
         
       }
-      a:link {color:#2ecc71; text-decoration:none;}      /* unvisited link */
+      a:link {color:#3498db; text-decoration:none;}      /* unvisited link */
 a:visited {color:#3498db; text-decoration:none;}  /* visited link */
 a:hover {color:#e67e22;text-decoration:none;}  /* mouse over link */
 a:active {color:#e74c3c;text-decoration:none;}  /* selected link */
@@ -18,8 +18,8 @@ a:active {color:#e74c3c;text-decoration:none;}  /* selected link */
 IT undergrad. Programmer. Graphic designer. Tech Enthusiast. 
 </br> Like to work with products/technologies that interact with people directly
 </br> Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity!
-</br> <a href="https://docs.google.com/document/d/16EVN6ApIYVRzZYXIELs_ZClDvw4iYe-9UpknbvOpnJE/edit?usp=sharing">
-Check out my resume </a>
+</br> <a href="https://www.dropbox.com/s/ja3j3c3aj4ayuxb/ROHIT%20NIGAM.pdf">
+<h3>Check out my resume </h3></a>
  <div>
        <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=700px height=525px>
  </br>
