--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ IT undergrad. Programmer. Graphic designer. Tech Enthusiast.
 </br> Like to work with products/technologies that interact with people directly
 </br> Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity!
 </br> <a href="https://www.dropbox.com/s/ja3j3c3aj4ayuxb/ROHIT%20NIGAM.pdf">
-<h2><b>Check out my resume </b></h2></a>
+<b>Check out my resume </b></a>
  <div>
        <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=700px height=525px>
  </br>
