--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ a:active {color:#e74c3c;text-decoration:none;}  /* selected link */
 IT undergrad. Programmer. Graphic designer. Tech Enthusiast. 
 </br> Like to work with products/technologies that interact with people directly
 </br> Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity!
-</br> <a href="http://sdrv.ms/1c0C7zd">
+</br> <a href="https://www.dropbox.com/s/ja3j3c3aj4ayuxb/ROHIT%20NIGAM.pdf">
 <b>Check out my resume </b></a>
  <div>
        <img src="http://s15.postimg.org/qrqpd8h7v/image.png" width=700px height=525px>
