--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a:active {color:#e74c3c;text-decoration:none;}  /* selected link */
     </style>
 <body bgcolor=#ececec>
 <center>
-IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President of <a href="http://www.iecsemanipal.com">IE CSE</a>
+IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President @ <a href="http://www.iecsemanipal.com">IE CSE</a>
 </br> Like to work with products/technologies that interact with people directly
 </br> Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity!
 </br> <a href="https://www.dropbox.com/s/ja3j3c3aj4ayuxb/ROHIT%20NIGAM.pdf">
