--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President @ <a href
  
  <a href="https://www.twitter.com/theRonnicle"><img src="http://s28.postimg.org/qxi40xqw9/image.png"></a>
  
- <a href="https://www.behance.net/theronnicle"><img src="http://s22.postimg.org/rx8qzeqsx/behance.png"></a>
+ <a href="https://www.behance.net/theronnicle"><img src="http://s22.postimg.org/rx8qzeqsx/behance.png" width=100px height=100px></a>
  </center>
 </body>
 </html>
