--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png" />
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.html" />
 
-        <link rel="stylesheet" href="assets/css/min.css">
+        <link rel="stylesheet" href="min.css">
 
         <script type="text/javascript" src="../use.typekit.net/eig7kju.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         
-        <script src="assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-        <script src="assets/js/vendor/jquery-1.9.1.min.js"></script>
+        <script src="mmodernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="jquery-1.9.1.min.js"></script>
 		
 		    <link href="themes/4/js-image-slider.css" rel="stylesheet" type="text/css" />
     <script src="themes/4/js-image-slider.js" type="text/javascript"></script>
@@ -304,7 +304,7 @@ IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
 
 
 		<script src="assets/js/vendor/jquery-1.9.1.min.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="main.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
