--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <script type="text/javascript" src="../use.typekit.net/eig7kju.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         
-        <script href="mmodernizr-2.6.2-respond-1.1.0.min.js"></script>
-        <script href="jquery-1.9.1.min.js"></script>
+        <script src="mmodernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="jquery-1.9.1.min.js"></script>
 		
 		    <link href="themes/4/js-image-slider.css" rel="stylesheet" type="text/css" />
     <script src="themes/4/js-image-slider.js" type="text/javascript"></script>
