--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Primary, middle & high school
 				   <h1 style="text-align:center">WORK EXPERIENCE</h1>
 				   
 				   <p style="color:#646B6D">
-                    <img src="assets/css/img/a.png" alt="SKILLS" style="float:left;margin:0 5em 0 0;" />
+                    <img src="http://s14.postimg.org/6albup1zl/image.png" alt="SKILLS" style="float:left;margin:0 5em 0 0;" />
 				   
 	<ul style="color:#646B6D">
 
