--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <div class="header-wrap ">
                 <header class="wrapper">
 
-                   <div id="logo"><a href="index.html"><img src="assets/css/img/logo.svg" alt="Adam Mottau"></a></div>
+                   <div id="logo"><a href="index.html"><img src="https://hostr.co/OpSwET2peBSb" alt="Adam Mottau"></a></div>
 
                   <nav>
 
