--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <div class="header-wrap ">
                 <header class="wrapper">
 
-                   <div id="logo"><a href="index.html"><img src="https://hostr.co/OpSwET2peBSb" alt="Adam Mottau"></a></div>
+                   <div id="logo"><a href="index.html"><img src="http://s26.postimg.org/y1mde47ih/logo.png" alt="Adam Mottau"></a></div>
 
                   <nav>
 
@@ -72,7 +72,7 @@
             <div class="title intro clearfix">
 
                 
-                   <img src="assets/css/img/mottau-intro.svg" alt="ROHIT NIGAM" class="wrapper">
+                   <img src="http://s26.postimg.org/dg308h0jt/intro.png" alt="ROHIT NIGAM" class="wrapper">
                     <span><p></p></span>
                     <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President at <a id="iecse" class="iecse" href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </b> </br> 
 
