--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
          <div class="header-wrap ">
                 <header class="wrapper">
 
-                   <div id="logo"><a href="index.html"><img src="http://s26.postimg.org/y1mde47ih/logo.png" alt="Adam Mottau"></a></div>
-
+                   <div id="logo"><a href="index.html">
+                   <img src="http://s26.postimg.org/y1mde47ih/logo.png" alt="Adam Mottau" style="padding-top: 10px; border-top-width: 10px; margin-top: 10px;">
                   <nav>
 
 <ul>
@@ -72,7 +72,7 @@
             <div class="title intro clearfix">
 
                 
-                   <img src="http://s26.postimg.org/dg308h0jt/intro.png" alt="ROHIT NIGAM" class="wrapper">
+                   <img src="http://s26.postimg.org/plwswm4nd/mottau_intro.png" alt="ROHIT NIGAM" class="wrapper">
                     <span><p></p></span>
                     <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President at <a id="iecse" class="iecse" href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </b> </br> 
 
