--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <!-- BEGIN SPOT TITLE:INTRO -->  
             <div class="title intro clearfix">
 
+                <img src="assets/css/img/mottau-intro.svg" alt="ROHIT NIGAM" class="wrapper">
                 
-                   <img src="http://s26.postimg.org/plwswm4nd/mottau_intro.png" alt="ROHIT NIGAM" class="wrapper">
-                    <span><p></p></span>
+                <span><p></p></span>
                     <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President at <a id="iecse" class="iecse" href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </b> </br> 
 
 Like to work with products/technologies that interact with people directly 
