--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -89,7 +88,7 @@ Prefer to work in a start-up like environment where there is a perfect blend of 
 
  <!-- BEGIN WORK SECTION -->
  <section id="intro">
-<img id="leotartari" src="assets/css/img/rohit.png" />
+<img id="leotartari" src="http://postimg.org/image/twbgs79qd/rohit.png" />
 
 <p> <center>
 <h1 style="text-align:center;">EDUCATION</h1>
