--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          <div class="header-wrap ">
                 <header class="wrapper">
 
-                   <div id="logo"><a href="index.html"><img src="assets/css/img/logo.svg" alt="Adam Mottau"></a>
+                   <div id="logo"><a href="index.html"><img src="http://s26.postimg.org/y1mde47ih/logo.png" alt="Adam Mottau"></a>
 				   </div>
 
                   <nav>
