--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
          <div class="header-wrap ">
                 <header class="wrapper">
 
-                   <div id="logo"><a href="index.html"><img src="http://s26.postimg.org/y1mde47ih/logo.png" alt="Adam Mottau"></a>
-				   </div>
+                   <div id="logo"><a href="index.html"><img src="http://s26.postimg.org/y1mde47ih/logo.png" alt="Adam Mottau" style="margin-top:20px;"></a>
+				</div>
 
                   <nav>
 
