--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Prefer to work in a start-up like environment where there is a perfect blend of 
 
  <!-- BEGIN WORK SECTION -->
  <section id="intro">
-<img id="leotartari" src="http://postimg.org/image/twbgs79qd/rohit.png" />
+<img id="leotartari" src="http://i57.tinypic.com/nntcfb.png" />
 
 <p> <center>
 <h1 style="text-align:center;">EDUCATION</h1>
