--- a/index.html
+++ b/index.html
@@ -299,10 +299,14 @@ IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
             <footer class="wrapper">
                 
                  <ul>
-                    <li><a href="index.html#contact"  data-icon="c" class="anchor"></a></li>
-                    <li><a href="http://www.flickr.com/photos/greshbin/"  data-icon="d" target="_blank"></a></li>
-                    <li><a href="http://uk.linkedin.com/in/adammottau"  data-icon="e" target="_blank"></a></li>
-                </ul>
+                    <li> <a href="https://www.facebook.com/rohit.nigam"><img src="http://s30.postimg.org/4rllrjblp/image.png"></a>
+ 
+ </li><li><a href="https://in.linkedin.com/pub/rohit-nigam/7a/454/8b/"><img src="http://s27.postimg.org/ez971244f/image.png"></a>
+ 
+</li><li> <a href="https://www.twitter.com/theRonnicle"><img src="http://s28.postimg.org/qxi40xqw9/image.png"></a>
+ 
+</li><li> <a href="https://www.behance.net/theronnicle"><img src="http://s22.postimg.org/rx8qzeqsx/behance.png" width=100px height=100px></a>
+         </li>       </ul>
 
             </footer>
 </div>
