--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="title intro clearfix">
 
                 
-                   <img src="http://i58.tinypic.com/2uiycys.png" alt="ROHIT NIGAM" class="wrapper" >
+                   <img src="http://s26.postimg.org/475fc3h1l/mottau_intro.png" alt="ROHIT NIGAM" class="wrapper" >
                     <span><p></p></span>
                     <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President at <a id="iecse" class="iecse" href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </b> </br> 
 
