--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@ IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
        <div class="footer-container">
             <footer class="wrapper">
                 
-                  <a href="https://www.facebook.com/rohit.nigam"><img src="http://s30.postimg.org/4rllrjblp/image.png"></a>
+                 <!-- <a href="https://www.facebook.com/rohit.nigam"><img src="http://s30.postimg.org/4rllrjblp/image.png"></a> -->
  
  <a href="https://in.linkedin.com/pub/rohit-nigam/7a/454/8b/"><img src="http://s27.postimg.org/ez971244f/image.png"></a>
  
- <a href="https://www.twitter.com/theRonnicle"><img src="http://s28.postimg.org/qxi40xqw9/image.png"></a>
+<!-- <a href="https://www.twitter.com/theRonnicle"><img src="http://s28.postimg.org/qxi40xqw9/image.png"></a> -->
  
  <a href="https://www.behance.net/theronnicle"><img src="http://s22.postimg.org/rx8qzeqsx/behance.png" width=100px height=100px></a>
 
