--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="title intro clearfix">
 
                 
-                   <img src="https://cheetah.host4cheap.org:2083/cpsess5543932918/viewer/home%2fiecseman%2fpublic_html%2frohit/mottau-intro.svg"  alt="ROHIT NIGAM" class="wrapper" >
+                   <img src="https://dl.dropboxusercontent.com/u/101900773/mottau-intro.svg"  alt="ROHIT NIGAM" class="wrapper" >
                     <span><p></p></span>
                     <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President at <a id="iecse" class="iecse" href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </b> </br> 
 
