--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     
-<!-- Mirrored from mottau.co.uk/ by HTTrack Website Copier/3.x [XR&CO'2013], Thu, 10 Apr 2014 15:33:15 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -88,7 +86,7 @@ Prefer to work in a start-up like environment where there is a perfect blend of 
 
  <!-- BEGIN WORK SECTION -->
  <section id="intro">
-<img id="leotartari" src="http://i57.tinypic.com/nntcfb.png" />
+<img id="leotartari" src="https://dl.dropboxusercontent.com/u/101900773/me.png" />
 
 <p> <center>
 <h1 style="text-align:center;">EDUCATION</h1>
