--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 
                    <img src="https://dl.dropboxusercontent.com/u/101900773/mottau-intro.svg"  alt="ROHIT NIGAM" class="wrapper" >
                     <span><p></p></span>
-                    <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast. President at <a id="iecse" class="iecse" href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </b> </br> 
+                    <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast.  <br>
 
 Like to work with products/technologies that interact with people directly 
 Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity! </h2>
@@ -129,6 +129,11 @@ Customer care desktop portal” using
 Visual C# and database on MS-Access
 <br></li>
 <br>
+<li>President at <a id="iecse" class="iecse" href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </b> </br></li>
+</li>
+	<li>
+		<b> Manager </b> at <b>Google Developers Group</b> <a href="https://developers.google.com/groups/chapter/101309722229928080208/">Manipal </a>
+	</li>
 </ul>
 
 </p>
