--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Customer care desktop portal” using
 Visual C# and database on MS-Access
 <br></li>
 <br>
-<li>President at <a id="iecse" class="iecse" href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </b> </br></li>
+<li>President at <a href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </br>
 </li>
 	<li>
 		<b> Manager </b> at <b>Google Developers Group</b> <a href="https://developers.google.com/groups/chapter/101309722229928080208/">Manipal </a>
