--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 
                    <img src="https://dl.dropboxusercontent.com/u/101900773/mottau-intro.svg"  alt="ROHIT NIGAM" class="wrapper" >
                     <span><p></p></span>
-                    <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast.  <br>
+                    <h2><b>IT undergrad. Programmer. Graphic designer. Tech Enthusiast. </b> <br>
 
 Like to work with products/technologies that interact with people directly 
 Prefer to work in a start-up like environment where there is a perfect blend of technical skills & creativity! </h2>
