--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ Customer care desktop portal” using
 Visual C# and database on MS-Access
 <br></li>
 <br>
-<li>President at <a href="http://www.iecsemanipal.com" style="border-bottom-width: 0px; ">IE CSE</a> </br>
+<li><b>President</b> at <a style="color:#61AFF0;border-bottom-width: 0px; " href="http://www.iecsemanipal.com" >IE CSE</a> </br>
 </li>
 	<li>
-		<b> Manager </b> at <b>Google Developers Group</b> <a href="https://developers.google.com/groups/chapter/101309722229928080208/">Manipal </a>
+		<b> Manager </b> at <b><a style="color:#61AFF0;border-bottom-width: 0px;">Google Developers Group</b></a> <a href="https://developers.google.com/groups/chapter/101309722229928080208/">Manipal </a>
 	</li>
 </ul>
 
