--- a/index.html
+++ b/index.html
@@ -123,17 +123,25 @@ Primary, middle & high school
 				   
 				   <ul style="color:#646B6D">
 <li><b><a style="color:#61AFF0">RELIANCE COMMUNICATIONS LTD.</a></b><br>
-Trainee<br>
+<b>Trainee</b><br>
 Developed a “Complaint booking &
 Customer care desktop portal” using
 Visual C# and database on MS-Access
 <br></li>
+
 <br>
-<li><b>President</b> at <a style="color:#61AFF0;border-bottom-width: 0px; " href="http://www.iecsemanipal.com" >IE CSE</a> </br>
-</li>
-	<li>
-		<b> Manager </b> at <b><a style="color:#61AFF0;border-bottom-width: 0px;">Google Developers Group</b></a> <a href="https://developers.google.com/groups/chapter/101309722229928080208/">Manipal </a>
-	</li>
+<li><b><a style="color:#61AFF0"  href="http://www.iecsemanipal.com">IE CSE</a></b><br>
+<b>President</b><br>
+Head of the official Computer Science club of MIT, Manipal
+<br></li>
+
+<br>
+<li><b><a style="color:#61AFF0" href="https://developers.google.com/groups/chapter/101309722229928080208/">GDG - Manipal </a></b><br>
+<b>Manager</b><br>
+Google Developers Group, Manipal. A place for developers to express their enthusiasm, questions or concerns, ideas and opinions.
+<br></li>
+
+
 </ul>
 
 </p>
