--- a/index.html
+++ b/index.html
@@ -266,11 +266,9 @@ IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
             </section>
             <!-- END CONTACT SECTION -->>
 <section>          
-            </div> <!-- #main -->
+       
 
-       <div class="footer-container">
-            <footer class="wrapper">
-                
+       <center>
                  <!-- <a href="https://www.facebook.com/rohit.nigam"><img src="http://s30.postimg.org/4rllrjblp/image.png"></a> -->
  
  <a href="https://in.linkedin.com/pub/rohit-nigam/7a/454/8b/"><img src="http://s27.postimg.org/ez971244f/image.png" width=50px height=50px></a>
@@ -279,10 +277,11 @@ IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
  
  <a href="https://www.behance.net/theronnicle"><img src="http://s22.postimg.org/rx8qzeqsx/behance.png" width=50px height=50px></a>
 
-            </footer>
-</div>
 
+</center>
 </section>
+
+ </div>     <!-- #main -->
 
 		<script src="jquery-1.9.1.min.js"></script>
 <script src="main.js"></script>
