--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@ IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
             <!-- END WRAPPER -->
 
             </section>
-            <!-- END CONTACT SECTION -->>
+            <!-- END CONTACT SECTION -->
+             </div>     <!-- #main -->
 <section>          
        
 
@@ -281,7 +282,7 @@ IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
 </center>
 </section>
 
- </div>     <!-- #main -->
+
 
 		<script src="jquery-1.9.1.min.js"></script>
 <script src="main.js"></script>
