--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
             
-        <link rel="shortcut icon" href="favicon5e1f.ico?v=2" type="image/x-icon">
-        <link rel="icon" href="favicon5e1f.ico?v=2" type="image/x-icon">
+        <link rel="shortcut icon" href="https://dl.dropboxusercontent.com/u/101900773/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="https://dl.dropboxusercontent.com/u/101900773/favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png" />
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png" />
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png" />
