--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ ORACLE 11g Server/Express, PHPmyAdmin, MS-Access<br></li>
 IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
 </p>
 
-					<a class="button" href="#contact" target="_blank" onClick="ga('send', 'event', 'button', 'click', 'CV');">Request CV</a>
+					<a class="button" href="#contact">Request CV</a>
 
 
        </center>
