--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <div class="header-wrap ">
                 <header class="wrapper">
 
-                   <div id="logo"><a href="index.html"><img src="http://s26.postimg.org/y1mde47ih/logo.png" alt="ROHIT NIGAM"></a>
+                   <div id="logo"><a href="index.html"><img src="http://s26.postimg.org/y1mde47ih/logo.png" alt="ROHIT NIGAM" style="margin-top:20px;"></a>
 				   </div>
 
                   <nav>
