--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ IBM Infosphere, Visual Studios, NetBeans, MASM, DreamWeaver<br></li>
                 <div class="title clearfix">
 
                         <center>
-                            <img src="https://dl.dropboxusercontent.com/u/101900773/mail.png">
+                            <img src="https://dl.dropboxusercontent.com/u/101900773/flat-email-icon-display.jpg">
                          </center>
                     <div class="text">
                          <h1>Contact</h1>
